[gd_scene load_steps=15 format=3 uid="uid://dgxug4yl0qg3x"]

[ext_resource type="Script" path="res://main_window/appearance_widget/appearance_widget.gd" id="1_1o2da"]
[ext_resource type="Script" path="res://custom/tooltip.gd" id="2_4x6jm"]
[ext_resource type="Texture2D" uid="uid://lqaqpht4rju6" path="res://main_window/appearance_widget/images/mode_dark.svg" id="3_o8p33"]

[sub_resource type="ButtonGroup" id="ButtonGroup_43ver"]

[sub_resource type="InputEventAction" id="InputEventAction_dvngi"]
action = &"view_mode_1"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_v5qej"]
events = [SubResource("InputEventAction_dvngi")]

[sub_resource type="InputEventAction" id="InputEventAction_jopkq"]
action = &"view_mode_2"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_1x0d2"]
events = [SubResource("InputEventAction_jopkq")]

[sub_resource type="InputEventAction" id="InputEventAction_6fgru"]
action = &"view_mode_3"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_gxdox"]
events = [SubResource("InputEventAction_6fgru")]

[sub_resource type="InputEventAction" id="InputEventAction_uckjy"]
action = &"view_mode_4"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_8cdb0"]
events = [SubResource("InputEventAction_uckjy")]

[sub_resource type="InputEventAction" id="InputEventAction_lv7wu"]
action = &"toggle_dark_mode"

[sub_resource type="Shortcut" id="Shortcut_ljh70"]
events = [SubResource("InputEventAction_lv7wu")]

[node name="AppearanceWidget" type="VBoxContainer"]
offset_right = 15.0
offset_bottom = 122.0
script = ExtResource("1_1o2da")

[node name="SingleDay" type="Button" parent="."]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"RightSidebarButton"
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = SubResource("ButtonGroup_43ver")
shortcut = SubResource("Shortcut_v5qej")
shortcut_in_tooltip = false
text = "1"

[node name="Tooltip" type="Node" parent="SingleDay"]
script = ExtResource("2_4x6jm")
text = "Show 1 Day"

[node name="ThreeDays" type="Button" parent="."]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"RightSidebarButton"
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = SubResource("ButtonGroup_43ver")
shortcut = SubResource("Shortcut_1x0d2")
shortcut_in_tooltip = false
text = "3"

[node name="Tooltip" type="Node" parent="ThreeDays"]
script = ExtResource("2_4x6jm")
text = "Show 3 Days"

[node name="FiveDays" type="Button" parent="."]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"RightSidebarButton"
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = SubResource("ButtonGroup_43ver")
shortcut = SubResource("Shortcut_gxdox")
shortcut_in_tooltip = false
text = "5"

[node name="Tooltip" type="Node" parent="FiveDays"]
script = ExtResource("2_4x6jm")
text = "Show 5 Days"

[node name="SevenDays" type="Button" parent="."]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"RightSidebarButton"
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = SubResource("ButtonGroup_43ver")
shortcut = SubResource("Shortcut_8cdb0")
shortcut_in_tooltip = false
text = "7"

[node name="Tooltip" type="Node" parent="SevenDays"]
script = ExtResource("2_4x6jm")
text = "Show 7 Days"

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Mode" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"RightSidebarButton"
shortcut = SubResource("Shortcut_ljh70")
shortcut_in_tooltip = false
icon = ExtResource("3_o8p33")

[node name="Tooltip" type="Node" parent="Mode"]
script = ExtResource("2_4x6jm")
text = "Switch To Light Mode"

[connection signal="pressed" from="Mode" to="." method="_on_mode_pressed"]
